Added image logos to header, menu button, arranged about me section, renamed back to style.scss - v

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./tidy.css" />
+    <link rel="stylesheet" href="./style.css" />
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,11 +25,9 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <h1 id="header-text">t. kaio</h1>
-            <div id="header-circle"></div>
+            <img src="./img/tsk.png" alt="header-logo">
         </div>
     </header>
-    <!-- MOBILE NAV MENU -->
 
     <!-- BUTTON/ICON FOR NAV MENU -->
     <input type="checkbox" id="nav-check" />
@@ -39,25 +37,21 @@
         </span>
         <!-- DESKTOP BUTTON -->
         <span id="desk-nav-icon">
-            <span id="menu-text">menu</span>
-            <span id="arrows">
-                <i class="fa-solid fa-long-arrow-alt-left arrow"></i><i
-                    class="fa-solid fa-long-arrow-alt-right arrow"></i>
-            </span>
+            <img id="menu-text" src="./img/menu-circle.png" alt="tsk">
         </span>
     </label>
-
     <!-- NAV LIST MENU -->
     <nav id="nav-main">
         <ul id="nav-list">
-            <li><a href="./about.html">about</a></li>
-            <li><a href="./code.html">code</a></li>
-            <li><a href="./personal.html">personal</a></li>
-            <li><a href="./journal.html">journal</a></li>
-            <li><a href="./resume.html">resume</a></li>
-            <li><a href="./contact.html">contact</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./code.html">Code</a></li>
+            <li><a href="./personal.html">Personal</a></li>
+            <li><a href="./journal.html">Journal</a></li>
+            <li><a href="./resume.html">Resume</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
+
     <!-- MAIN CONTENT -->
     <main>
         <section class="content" id="home">
