--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             <div class="flex-cont">
                 <div class="wide-cont">
                 <article class="top-card article">
-                    <h2>About me</h2>
+                    <h2>Introduction</h2>
                     <p>
                         <em>Hey there!</em>
                         I'm Tané - a 26 year old currently based in the lush surroundings of the foothills of the
