Took out personal details

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                 <article class="top-card article">
                     <h2>Introduction</h2>
                     <p>
-                        <em>Hey there!</em>
+                        Hello!
                         I'm Tané - a 26 year old currently based in the lush surroundings of the foothills of the
                         Dandenong Ranges in Melbourne, Victoria. As a student of Web Development at Coder Academy I
                         spend most of my time learning and practising code, sharpening my problem solving skills and
@@ -93,8 +93,8 @@
                         <dt>Gender: </dt>
                         <dd>He/him</dd>
 
-                        <dt>Location: </dt>
-                        <dd>Ferntree Gully, Victoria, Australia</dd>
+                        <!-- <dt>Location: </dt>
+                        <dd>Ferntree Gully, Victoria, Australia</dd> -->
 
                         <dt>Occupation: </dt>
                         <dd>Student of Web Development</dd>
