--- a/contact.html
+++ b/contact.html
@@ -60,12 +60,12 @@
 
             <article class="card modular info">
                 <h2>Email</h2>
-                <p>tanesamuelkaio@gmail.com</p>
+                <p>hello@email.com</p>
             </article>
 
             <article class="card modular info">
                 <h2>Phone</h2>
-                <p>04-666-518-20</p>
+                <p>123458649</p>
             </article>
 
             <div class="wide-cont">
