--- a/resume.html
+++ b/resume.html
@@ -43,12 +43,12 @@
     <!-- NAV LIST MENU -->
     <nav id="nav-main">
         <ul id="nav-list">
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./code.html">Code</a></li>
-            <li><a href="./personal.html">Personal</a></li>
-            <li><a href="./journal.html">Journal</a></li>
-            <li><a href="./resume.html">Resume</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./about.html"><img src="./img/about1.png"></a></li>
+            <li><a href="./code.html"><img src="./img/code.png"></a></li>
+            <li><a href="./personal.html"><img src="./img/personalsmall.png"></a></li>
+            <li><a href="./journal.html"><img src="./img/journalsmall.png"></a></li>
+            <li><a href="./resume.html"><img src="./img/resumesmall.png"></a></li>
+            <li><a href="./contact.html"><img src="./img/contactsmall.png"></a></li>
         </ul>
     </nav>
 
