Adding new graphics from canva - details removed for presentation

--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
 </head>
 
 <body>
-    
+
     <!-- HEADER MODULE -->
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <img src="./img/tsk.png" alt="header-logo">
+            <img src="./img/tane.png" alt="header-logo">
         </div>
     </header>
 
@@ -55,17 +55,20 @@
 
     <main>
         <section class="content">
+
             <!-- PAGE SUBHEADING -->
-            <h2 id="page-sub">about</h2>
+            <img id="page-sub" src="./img/about1.png">
+            <!-- PUT THIS HERE INSTEAD OF TEXT -->
+            <!-- PORTRAIT -->
             <figure id="about-img-cont">
                 <img id="about-img" src="./img/nz-port.jpg" alt="An image of me">
             </figure>
 
             <!-- BIO/SKILLS -->
-            <div class="flex-cont">
-                <div class="wide-cont">
+
+            <div class="wide-cont">
                 <article class="top-card article">
-                    <h2>Introduction</h2>
+                    <h2>Who am I?</h2>
                     <p>
                         Hello!
                         I'm Tané - a 26 year old currently based in the lush surroundings of the foothills of the
@@ -74,31 +77,53 @@
                         learning more about the world of tech.
                         <br>
                         My adventure into the world of coding may not have started long ago, however I've already
-                        learned an immense amount of valuable practical lessons and industry specific knowledge. Below
+                        learned an immense amount of valuable practical lessons and industry specific knowledge.
+                        Below
                         are some of the tools and skills I've learned so far:
                     </p>
                 </article>
-                </div>
+            </div>
 
-                <article class="card modular gallery">
+            <div class="flex-cont">
+                <article class="card">
                     <div>
-                    <h2>Bio</h2>
-                    <dl>
-                        <dt>Name: </dt>
-                        <dd>Tané Kaio</dd>
-                        
-                        <dt>Age: </dt>
-                        <dd>26</dd>
-
-                        <dt>Gender: </dt>
-                        <dd>He/him</dd>
-
-                        <!-- <dt>Location: </dt>
-                        <dd>Ferntree Gully, Victoria, Australia</dd> -->
-
-                        <dt>Occupation: </dt>
-                        <dd>Student of Web Development</dd>
-                    </dl>
+                        <div class=card-list-grid>
+                            <div>
+                                <ul>
+                                    <li>
+                                        <h3>Name:</h3>Tané Kaio
+                                    </li>
+                                    <li>
+                                        <h3>Age:</h3>26
+                                    </li>
+                                    <li>
+                                        <h3>Gender</h3>He/him
+                                    </li>
+                                    <li>
+                                        <h3>Location:</h3>Ferntree Gully, Victoria, Australia
+                                    </li>
+                                    <li>
+                                        <h3>Nationality:</h3>Australian/New Zealand
+                                    </li>
+                                </ul>
+                            </div>
+                            <ul>
+                                <li>
+                                    <h3>Industries:</h3>
+                                </li>
+                                <li>Financial technology</li>
+                                <li>Pharmaceuticals</li>
+                                <li>Hospitality</li>
+                                <li>Warehousing</li>
+                                <li>Manufacturing</li>
+                                <li>
+                                    <br>
+                                    <h3>Vocational:</h3>
+                                </li>
+                                <li>Audio engineering</li>
+                                <li>Full-stack web development (current)</li>
+                            </ul>
+                        </div>
                     </div>
                 </article>
 
@@ -125,24 +150,6 @@
                                 <li>CLI</li>
                             </ul>
                         </div>
-                        <!-- <div>
-                            <h3>Workflow</h3>
-                            <ul>
-                                <li>Agile Project Management</li>
-                                <li>Kanban board</li>
-                                <li>Wireframes</li>
-                                <li>CSS / HTML Validators</li>
-                            </ul>
-                        </div>
-                        <div>
-                            <h3>Principles</h3>
-                            <ul>
-                                <li>Semantic HTML</li>
-                                <li>Mobile-first design</li>
-                                <li>Responsive layouts</li>
-                                <li>Basic UI</li>
-                            </ul>
-                        </div> -->
                     </div>
                 </article>
 
