Presentation done, need to add back details, about to branch to restyle - v

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <img src="./img/tane.png" alt="header-logo">
+            <img src="./img/tsk.png" alt="header-logo">
         </div>
     </header>
 
