--- a/code.html
+++ b/code.html
@@ -55,7 +55,7 @@
     <main>
         <section class="content">
             <!-- PAGE SUBHEADING -->
-            <h2 id="page-sub">code</h2>
+            <img id="page-sub" src="./img/codesmall.png">
 
             <div class="top-card">
                 <h2>Code projects</h2>
