--- a/journal.html
+++ b/journal.html
@@ -56,7 +56,13 @@
     <main>
         <section class="content">
             <!-- PAGE SUBHEADING -->
-            <h2 id="page-sub">journal</h2>
+            <img id="page-sub" src="./img/journalsmall.png">
+
+            <!-- PAGE HEADING AND DESCRIPTION -->
+            <div class="top-card">
+                <h2>Journal</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet eros posuere, fringilla justo non, mollis massa. Cras nec dui sed purus tempor volutpat. Phasellus eget egestas orci. Phasellus bibendum enim a sapien porta, sed mattis ex aliquet. Fusce pharetra, enim a porttitor rhoncus, eros velit mattis massa, nec ornare metus arcu a metus. Donec non massa urna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+            </div>
 
             <!-- PAGE CONTENTS DROPDOWN -->
             <div class="wide-cont">
