--- a/contact.html
+++ b/contact.html
@@ -56,16 +56,16 @@
     <main>
         <section class="content">
             <!-- PAGE SUBHEADING -->
-            <h2 id="page-sub">contact</h2>
+            <img id="page-sub" src="./img/contactsmall.png">
 
             <article class="card modular info">
                 <h2>Email</h2>
-                <p>hello@email.com</p>
+                <p>tanesamuelkaio@gmail.com</p>
             </article>
 
             <article class="card modular info">
                 <h2>Phone</h2>
-                <p>123458649</p>
+                <p>04-666-518-20</p>
             </article>
 
             <div class="wide-cont">
