Need to do documentation

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <title>Home</title>
 </head>
 
-<body>
+<body id="body-index">
     <!-- HEADER MODULE -->
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <img src="./img/tsk.png" alt="header-logo">
+            <img src="./img/h-tsk1.png" alt="header-logo">
         </div>
     </header>
 
