--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         </span>
         <!-- DESKTOP BUTTON -->
         <span id="desk-nav-icon">
-            <img id="menu-text" src="./img/menu-circle.png" alt="tsk">
+            <img id="menu-text" src="./img/menu.png" alt="tsk">
         </span>
     </label>
     <!-- NAV LIST MENU -->
