Used Canva graphics - still need to validate HTML

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <img src="./img/tsk.png" alt="header-logo">
+            <img src="./img/graphics/tsk-sun.svg" alt="header-logo">
         </div>
     </header>
 
@@ -38,34 +38,30 @@
         </span>
         <!-- DESKTOP BUTTON -->
         <span id="desk-nav-icon">
-            <img id="menu-text" src="./img/menu.png" alt="tsk">
+            <img id="menu-text" src="./img/graphics/menu-sun.svg" alt="tsk">
         </span>
     </label>
     <!-- NAV LIST MENU -->
     <nav id="nav-main">
         <ul id="nav-list">
-            <li><a href="./about.html"><img src="./img/about1.png"></a></li>
-            <li><a href="./code.html"><img src="./img/code.png"></a></li>
-            <li><a href="./personal.html"><img src="./img/personalsmall.png"></a></li>
-            <li><a href="./journal.html"><img src="./img/journalsmall.png"></a></li>
-            <li><a href="./resume.html"><img src="./img/resumesmall.png"></a></li>
-            <li><a href="./contact.html"><img src="./img/contactsmall.png"></a></li>
+            <li><a href="./about.html"><img src="./img/graphics/about.svg"></a></li>
+            <li><a href="./code.html"><img src="./img/graphics/code.svg"></a></li>
+            <li><a href="./personal.html"><img src="./img/graphics/personal.svg"></a></li>
+            <li><a href="./journal.html"><img src="./img/graphics/journal.svg"></a></li>
+            <li><a href="./resume.html"><img src="./img/graphics/resume.svg"></a></li>
+            <li><a href="./contact.html"><img src="./img/graphics/contact.svg"></a></li>
         </ul>
     </nav>
 
     <main>
         <section class="content">
 
-            <!-- PAGE SUBHEADING -->
-            <img id="page-sub" src="./img/about1.png">
-            <!-- PUT THIS HERE INSTEAD OF TEXT -->
             <!-- PORTRAIT -->
             <figure id="about-img-cont">
                 <img id="about-img" src="./img/nz-port.jpg" alt="An image of me">
             </figure>
 
             <!-- BIO/SKILLS -->
-
             <div class="wide-cont">
                 <article class="top-card article">
                     <h2>Who am I?</h2>
@@ -84,97 +80,98 @@
                 </article>
             </div>
 
-            <div class="flex-cont">
-                <article class="card">
+            <!-- LISTS WITH DETAILS/SKILLS -->
+            <article class="card modular gallery">
+                <div class=card-list-grid>
+                    <ul>
+                        <li>
+                            <h3>Name:</h3>Tané Kaio
+                        </li>
+                        <li>
+                            <h3>Age:</h3>26
+                        </li>
+                        <li>
+                            <h3>Gender</h3>He/him
+                        </li>
+                        <li>
+                            <h3>Location:</h3>Ferntree Gully, Victoria, Australia
+                        </li>
+                        <li>
+                            <h3>Nationality:</h3>Australian/New Zealand
+                        </li>
+                    </ul>
+                </div>
+            </article>
+
+            <article class="card modular gallery">
+                <div class="card-list-grid">
+                    <ul>
+                        <li>
+                            <h3>Employment:</h3>
+                        </li>
+                        <li>Financial technology</li>
+                        <li>Pharmaceuticals</li>
+                        <li>Hospitality</li>
+                        <li>Warehousing</li>
+                        <li>Manufacturing</li>
+                        <li>
+                            <br>
+                            <h3>Vocations:</h3>
+                        </li>
+                        <li>Audio engineering</li>
+                        <li>Full-stack web development (current)</li>
+                    </ul>
+                </div>
+            </article>
+
+            <article class="card modular gallery">
+                <div class="card-list-grid">
                     <div>
-                        <div class=card-list-grid>
-                            <div>
-                                <ul>
-                                    <li>
-                                        <h3>Name:</h3>Tané Kaio
-                                    </li>
-                                    <li>
-                                        <h3>Age:</h3>26
-                                    </li>
-                                    <li>
-                                        <h3>Gender</h3>He/him
-                                    </li>
-                                    <li>
-                                        <h3>Location:</h3>Ferntree Gully, Victoria, Australia
-                                    </li>
-                                    <li>
-                                        <h3>Nationality:</h3>Australian/New Zealand
-                                    </li>
-                                </ul>
-                            </div>
-                            <ul>
-                                <li>
-                                    <h3>Industries:</h3>
-                                </li>
-                                <li>Financial technology</li>
-                                <li>Pharmaceuticals</li>
-                                <li>Hospitality</li>
-                                <li>Warehousing</li>
-                                <li>Manufacturing</li>
-                                <li>
-                                    <br>
-                                    <h3>Vocational:</h3>
-                                </li>
-                                <li>Audio engineering</li>
-                                <li>Full-stack web development (current)</li>
-                            </ul>
-                        </div>
+                        <h3>Languages:</h3>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>SCSS</li>
+                            <li>Bash/ZSH</li>
+                            <li>Python</li>
+                        </ul>
                     </div>
-                </article>
+                    <div>
+                        <h3>Software:</h3>
+                        <ul>
+                            <li>Visual Studio Code</li>
+                            <li>Git</li>
+                            <li>Github</li>
+                            <li>Balsamiq</li>
+                            <li>Trello</li>
+                            <li>CLI</li>
+                        </ul>
+                    </div>
+                </div>
+            </article>
 
-                <article class="card modular gallery">
-                    <div class="card-list-grid">
-                        <div>
-                            <h3>Languages</h3>
-                            <ul>
-                                <li>HTML</li>
-                                <li>CSS</li>
-                                <li>SCSS</li>
-                                <li>Bash/ZSH</li>
-                                <li>Python</li>
-                            </ul>
-                        </div>
-                        <div>
-                            <h3>Software</h3>
-                            <ul>
-                                <li>Visual Studio Code</li>
-                                <li>Git</li>
-                                <li>Github</li>
-                                <li>Balsamiq</li>
-                                <li>Trello</li>
-                                <li>CLI</li>
-                            </ul>
-                        </div>
+            <article class="card modular gallery">
+                <div class="card-list-grid">
+                    <div>
+                        <h3>Workflow:</h3>
+                        <ul>
+                            <li>Agile Project Management</li>
+                            <li>Kanban board</li>
+                            <li>Wireframes</li>
+                            <li>CSS / HTML Validators</li>
+                        </ul>
                     </div>
-                </article>
-
-                <article class="card modular gallery">
-                    <div class="card-list-grid">
-                        <div>
-                            <h3>Workflow</h3>
-                            <ul>
-                                <li>Agile Project Management</li>
-                                <li>Kanban board</li>
-                                <li>Wireframes</li>
-                                <li>CSS / HTML Validators</li>
-                            </ul>
-                        </div>
-                        <div>
-                            <h3>Principles</h3>
-                            <ul>
-                                <li>Semantic HTML</li>
-                                <li>Mobile-first design</li>
-                                <li>Responsive layouts</li>
-                                <li>Basic UI</li>
-                            </ul>
-                        </div>
+                    <div>
+                        <h3>Principles:</h3>
+                        <ul>
+                            <li>Semantic HTML</li>
+                            <li>Mobile-first design</li>
+                            <li>Responsive layouts</li>
+                            <li>Basic UI</li>
+                        </ul>
                     </div>
-                </article>
+                </div>
+            </article>
             </div>
         </section>
 
@@ -342,6 +339,8 @@
             </div>
         </section>
     </main>
+
+    <!-- FOOTER -->
     <footer>
         <p id="footer-text">&copy; Tané Kaio, 2022</p>
     </footer>
