--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <img src="./img/tsk.png" alt="header-logo">
+            <img src="./img/graphics/tsk-sun.svg" alt="header-logo">
         </div>
     </header>
 
@@ -37,18 +37,18 @@
         </span>
         <!-- DESKTOP BUTTON -->
         <span id="desk-nav-icon">
-            <img id="menu-text" src="./img/graphics/menu.png" alt="tsk">
+            <img id="menu-text" src="./img/graphics/menu-sun.svg" alt="tsk">
         </span>
     </label>
     <!-- NAV LIST MENU -->
     <nav id="nav-main">
         <ul id="nav-list">
-            <li><a href="./about.html"><img src="./img/about1.png"></a></li>
-            <li><a href="./code.html"><img src="./img/code.png"></a></li>
-            <li><a href="./personal.html"><img src="./img/personalsmall.png"></a></li>
-            <li><a href="./journal.html"><img src="./img/journalsmall.png"></a></li>
-            <li><a href="./resume.html"><img src="./img/resumesmall.png"></a></li>
-            <li><a href="./contact.html"><img src="./img/contactsmall.png"></a></li>
+            <li><a href="./about.html"><img src="./img/graphics/about.svg"></a></li>
+            <li><a href="./code.html"><img src="./img/graphics/code.svg"></a></li>
+            <li><a href="./personal.html"><img src="./img/graphics/personal.svg"></a></li>
+            <li><a href="./journal.html"><img src="./img/graphics/journal.svg"></a></li>
+            <li><a href="./resume.html"><img src="./img/graphics/resume.svg"></a></li>
+            <li><a href="./contact.html"><img src="./img/graphics/contact.svg"></a></li>
         </ul>
     </nav>
 
@@ -56,8 +56,10 @@
     <main>
         <section class="content" id="home">
 
+            <!-- HERO TITLE TEXT -->
             <h2 id="welcome-text">Welcome to the portfolio of aspiring web developer, Tané Kaio</h2>
 
+            <!-- BUTTON TO ENTER/GO TO ABOUT -->
             <div class="cont">
                 <form action="./about.html">
                     <input type="submit" value="Enter" class="button" />
