--- a/journal.html
+++ b/journal.html
@@ -25,7 +25,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <img src="./img/tsk.png" alt="header-logo">
+            <img src="./img/graphics/tsk-sun.svg" alt="header-logo">
         </div>
     </header>
 
@@ -37,26 +37,24 @@
         </span>
         <!-- DESKTOP BUTTON -->
         <span id="desk-nav-icon">
-            <img id="menu-text" src="./img/graphics/menu.png" alt="tsk">
+            <img id="menu-text" src="./img/graphics/menu-sun.svg" alt="tsk">
         </span>
     </label>
     <!-- NAV LIST MENU -->
     <nav id="nav-main">
         <ul id="nav-list">
-            <li><a href="./about.html"><img src="./img/about1.png"></a></li>
-            <li><a href="./code.html"><img src="./img/code.png"></a></li>
-            <li><a href="./personal.html"><img src="./img/personalsmall.png"></a></li>
-            <li><a href="./journal.html"><img src="./img/journalsmall.png"></a></li>
-            <li><a href="./resume.html"><img src="./img/resumesmall.png"></a></li>
-            <li><a href="./contact.html"><img src="./img/contactsmall.png"></a></li>
+            <li><a href="./about.html"><img src="./img/graphics/about.svg"></a></li>
+            <li><a href="./code.html"><img src="./img/graphics/code.svg"></a></li>
+            <li><a href="./personal.html"><img src="./img/graphics/personal.svg"></a></li>
+            <li><a href="./journal.html"><img src="./img/graphics/journal.svg"></a></li>
+            <li><a href="./resume.html"><img src="./img/graphics/resume.svg"></a></li>
+            <li><a href="./contact.html"><img src="./img/graphics/contact.svg"></a></li>
         </ul>
     </nav>
 
     <!-- MAIN CONTENT -->
     <main>
         <section class="content">
-            <!-- PAGE SUBHEADING -->
-            <img id="page-sub" src="./img/journalsmall.png">
 
             <!-- PAGE HEADING AND DESCRIPTION -->
             <div class="top-card">
@@ -83,6 +81,7 @@
                 </nav>
             </div>
 
+            <!-- BLOG POST ONE -->
             <div class="card article">
                 <label for="expand-check1" class="expand-icon">+/-
                     <a id="anchor-card1"></a>
@@ -162,7 +161,7 @@
                     </p>
                 </article>
             </div>
-
+            <!-- BLOG POST TWO -->
             <div class="card article">
                 <label for="expand-check2" class="expand-icon">+/-
                     <a id="anchor-card2"></a>
@@ -241,7 +240,7 @@
                     </p>
                 </article>
             </div>
-
+            <!-- BLOG POST THREE -->
             <div class="card article">
                 <label for="expand-check3" class="expand-icon">+/-
                     <a id="anchor-card3"></a>
@@ -320,7 +319,7 @@
                     </p>
                 </article>
             </div>
-
+            <!-- BLOG POST FOUR -->
             <div class="card article">
                 <label for="expand-check4" class="expand-icon">+/-
                     <a id="anchor-card4"></a>
@@ -399,7 +398,7 @@
                     </p>
                 </article>
             </div>
-
+            <!-- BLOG POST FIVE -->
             <div class="card article">
                 <label for="expand-check5" class="expand-icon">+/-
                     <a id="anchor-card5"></a>
@@ -480,6 +479,8 @@
 
         </section>
     </main>
+
+    <!-- FOOTER -->
     <footer>
         <p id="footer-text">&copy; Tané Kaio, 2022</p>
     </footer>
