--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <img src="./img/tsk.png" alt="header-logo">
+            <img src="./img/graphics/tsk-sun.svg" alt="header-logo">
         </div>
     </header>
 
@@ -37,27 +37,26 @@
         </span>
         <!-- DESKTOP BUTTON -->
         <span id="desk-nav-icon">
-            <img id="menu-text" src="./img/graphics/menu.png" alt="tsk">
+            <img id="menu-text" src="./img/graphics/menu-sun.svg" alt="tsk">
         </span>
     </label>
     <!-- NAV LIST MENU -->
     <nav id="nav-main">
         <ul id="nav-list">
-            <li><a href="./about.html"><img src="./img/about1.png"></a></li>
-            <li><a href="./code.html"><img src="./img/code.png"></a></li>
-            <li><a href="./personal.html"><img src="./img/personalsmall.png"></a></li>
-            <li><a href="./journal.html"><img src="./img/journalsmall.png"></a></li>
-            <li><a href="./resume.html"><img src="./img/resumesmall.png"></a></li>
-            <li><a href="./contact.html"><img src="./img/contactsmall.png"></a></li>
+            <li><a href="./about.html"><img src="./img/graphics/about.svg"></a></li>
+            <li><a href="./code.html"><img src="./img/graphics/code.svg"></a></li>
+            <li><a href="./personal.html"><img src="./img/graphics/personal.svg"></a></li>
+            <li><a href="./journal.html"><img src="./img/graphics/journal.svg"></a></li>
+            <li><a href="./resume.html"><img src="./img/graphics/resume.svg"></a></li>
+            <li><a href="./contact.html"><img src="./img/graphics/contact.svg"></a></li>
         </ul>
     </nav>
 
 
     <main>
         <section class="content">
-            <!-- PAGE SUBHEADING -->
-            <img id="page-sub" src="./img/contactsmall.png">
 
+            <!-- CONTACT DETAILS -->
             <article class="card modular info">
                 <h2>Email</h2>
                 <p>tanesamuelkaio@gmail.com</p>
@@ -68,6 +67,7 @@
                 <p>04-666-518-20</p>
             </article>
 
+                <!-- PROFESSIONAL/SOCIALS LOGO LINKS -->
             <div class="wide-cont">
                 <a href="https://github.com/Lanruoj" target="_blank">
                     <img class="logo" src="./img/github.png" alt="Github" />
@@ -82,6 +82,7 @@
 
         </section>
     </main>
+    <!-- FOOTER -->
     <footer>
         <p id="footer-text">&copy; Tané Kaio, 2022</p>
     </footer>
