--- a/personal.html
+++ b/personal.html
@@ -25,7 +25,7 @@
     <header>
         <!-- HEADER TITLE+CIRCLE -->
         <div id="header-cont">
-            <img src="./img/tsk.png" alt="header-logo">
+            <img src="./img/graphics/tsk-sun.svg" alt="header-logo">
         </div>
     </header>
 
@@ -37,28 +37,26 @@
         </span>
         <!-- DESKTOP BUTTON -->
         <span id="desk-nav-icon">
-            <img id="menu-text" src="./img/graphics/menu.png" alt="tsk">
+            <img id="menu-text" src="./img/graphics/menu-sun.svg" alt="tsk">
         </span>
     </label>
     <!-- NAV LIST MENU -->
     <nav id="nav-main">
         <ul id="nav-list">
-            <li><a href="./about.html"><img src="./img/about1.png"></a></li>
-            <li><a href="./code.html"><img src="./img/code.png"></a></li>
-            <li><a href="./personal.html"><img src="./img/personalsmall.png"></a></li>
-            <li><a href="./journal.html"><img src="./img/journalsmall.png"></a></li>
-            <li><a href="./resume.html"><img src="./img/resumesmall.png"></a></li>
-            <li><a href="./contact.html"><img src="./img/contactsmall.png"></a></li>
+            <li><a href="./about.html"><img src="./img/graphics/about.svg"></a></li>
+            <li><a href="./code.html"><img src="./img/graphics/code.svg"></a></li>
+            <li><a href="./personal.html"><img src="./img/graphics/personal.svg"></a></li>
+            <li><a href="./journal.html"><img src="./img/graphics/journal.svg"></a></li>
+            <li><a href="./resume.html"><img src="./img/graphics/resume.svg"></a></li>
+            <li><a href="./contact.html"><img src="./img/graphics/contact.svg"></a></li>
         </ul>
     </nav>
 
     <!-- MAIN CONTENT -->
     <main>
         <section class="content">
-            <!-- PAGE SUBHEADING -->
-            <h2 id="page-sub">personal</h2>
 
-
+            <!-- PAGE DESCRIPTION AND HEADING -->
             <div class="top-card">
                 <h2>Personal interests</h2>
                 <p>As much as we try, I believe it's impossible to <em>truly</em> seperate our professional and personal worlds, as they always seem to have an influence on each other. Below are some of the things that interest me in my spare time and inform how I approach my professional work.</p>
@@ -81,7 +79,8 @@
                     </ul>
                 </nav>
             </div>
-
+                
+                <!-- CARDS WITH EXPAND FUNCTION -->
                 <div class="card modular">
                     <label for="expand-check1" class="expand-icon">+/-
                         <a id="anchor-card1"></a>
@@ -213,6 +212,7 @@
                 </div>
         </section>
     </main>
+
     <!-- FOOTER -->
     <footer>
         <p id="footer-text">&copy; Tané Kaio, 2022</p>
